Fix Sefaria vs tag z-index

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -54,5 +54,5 @@ select.form-element {
 
 .select2-container {
   width: 100% !important;
-  z-index: 9999;
+  z-index: 8999;
 }
